# audio-annonation

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.migrate  LICENSE  Makefile  README.md  RESOURCES.md  config.py  db-entrypoint.sh  docker-compose.yml  environment.yml  manage.py  pyproject.toml  requirements.txt  setup.sh  web-entrypoint.sh
.github/workflows/: ci.yaml
api/: serializers.py  urls.py  views.py
waveform_audio/: asgi.py  dao.py  forms.py  models.py  response.py  settings.py  urls.py  utils.py  views.py  wsgi.py
waveform_audio/migrations/: 0001_initial.py  0002_alter_audiofile_file.py  0002_rename_created_at_audioannotation_timestamp_and_more.py  0002_subtitle.py  0003_rename_text_subtitle_content_and_more.py  0004_alter_subtitle_end_time_alter_subtitle_start_time.py
waveform_audio/static/css/: style.css
waveform_audio/static/js/: annotate.js  waveannotate.js
waveform_audio/templates/: annotate.html  annotations_dashboard.html  index.html  upload.html  upload_audio_subtitle.html
waveform_audio/tests/: __init__.py  conftest.py  test_forms.py  test_model.py  test_models.py  test_urls.py  test_utils.py
waveform_audio/tests/fixtures/: test_subtitles.srt
